# VideotecaClient

./: CMakeLists.txt  cliente.c  cliente.h  cliente.json  impiegato.c  impiegato.h  impiegato.json  inout.c  main.c  main.h  manager.c  manager.h  manager.json  parse.c  program.h  utils.c  utils.h
